<resources>
    <string name="app_name">Effill</string>
    <string name="verify">Verify</string>
    <string name="title_activity_logins">Logins</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login</string>
    <string name="file_new_case">File New Case</string>
    <string name="request_mapping_of_existing_case">Request mapping of existing case</string>
    <string name="contact_us">Contact us</string>
    <string name="search_for_invoice">Search for invoice</string>
    <string name="menu_Open">Open</string>
    <string name="close_menu">Close</string>
    <string name="proceed">PROCEED</string>
    <string name="please_add_case_party">PLEASE ADD CASE PARTY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_your_files">UPLOAD YOUR FILES</string>
    <string name="tap_to_upload_files">TAP TO UPLOAD FILES</string>
    <string name="tap_to_select_file">tap to select file</string>
    <string name="no_file_is_selected">No file is selected</string>
    <string name="upload_files">upload files</string>
    <string name="signup">SIGNUP</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username_phone_number">username/phone number</string>
    <string name="login_to_enjoy_our_service">Login to enjoy our service</string>
    <string name="title_activity_contact">Contact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>


</resources>