<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChangeView">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:src="@drawable/supremecourtlogo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewUp"
        android:text="@string/upload_your_files"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="-20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSelectF"
        android:layout_gravity="center"
        android:text="@string/tap_to_select_file"
        android:background="#00563F"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification"
        android:text="@string/no_file_is_selected"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUpload"
        android:layout_gravity="center"
        android:text="@string/upload_files"
        android:layout_marginTop="50dp"
        android:background="#b8860b"/>






</LinearLayout>