<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b8860b"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_round">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTo"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:id="@+id/editTextSubject"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/EditTextMessage"
        android:hint="@string/message"
        android:padding="10dp"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSend"
        android:text="@string/send"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:background="@drawable/bg_round"
        android:layout_marginTop="10dp"/>

</LinearLayout>