<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Login"
        android:orientation="vertical"
        android:background="#fff"
        android:padding="20dp">

     <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:src="@drawable/supremecourtlogo"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="-20sp"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_enjoy_our_service"
        android:textSize="30sp"
        android:layout_gravity="center"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/phone"
            android:hint="@string/username_phone_number">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:drawableRight="@drawable/ic_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00563F"
            android:text="LOGIN"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7dp"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/forget_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Forget password"
            android:background="#FF8A8A"
            android:layout_marginBottom="7dp"/>
        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#b8860b"
            android:text="@string/signup"/>


       </LinearLayout>



     </LinearLayout>
</ScrollView>